[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "easyvmaf"
version = "2.1.0"
description = "FFmpeg-based VMAF computation with automatic deinterlacing, scaling and sync"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "ffmpeg-progress-yield>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
easyvmaf = "easyvmaf.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["easyvmaf*"]

[tool.setuptools.package-data]
easyvmaf = ["py.typed"]
